# CHocoParse

./: .gitignore  Makefile.am  NOTICE  README.md  TODO  configure.ac  parser.c  tmp-build.sh
src/: tsconfig.c  tsconfig.h  tsconfig_common.h  tsconfig_data.c  tsconfig_data.h  tsconfig_err.c  tsconfig_err.h  tsconfig_inter.h  tsconfig_lex.c  tsconfig_lex.h  tsconfig_paths.c  tsconfig_paths.h  tsconfig_reader.h  tsconfig_test.c  tsconfig_tok.c  tsconfig_tok.h  tsconfig_tree.c  tsconfig_tree.h  tsconfig_tree_reader.c  tsconfig_tree_reader.h  tsconfig_utf8.h
